--- a/stock_searcher/StockSearcher.xaml
+++ b/stock_searcher/StockSearcher.xaml
@@ -5,15 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:nnns"
         mc:Ignorable="d"
-        Title="StockSearch" Height="127" Width="360" Foreground="Transparent" ResizeMode="NoResize" Visibility="Visible" WindowStyle="None" MouseLeftButtonDown="m_down" WindowStartupLocation="CenterScreen" Drop="m_drop" AllowDrop="True">
+        Title="StockSearch_nnns" Height="127" Width="360" Foreground="Transparent" ResizeMode="NoResize" Visibility="Visible" WindowStyle="None" MouseLeftButtonDown="m_down" Drop="m_drop" AllowDrop="True" MouseDoubleClick="m_doubleclick">
     <Window.Background>
         <ImageBrush ImageSource="res/main_bg.png"/>
     </Window.Background>
     <Grid>
-        <Button x:Name="bt_close" HorizontalAlignment="Right" VerticalAlignment="Top" Click="bt_colse" Style="{DynamicResource ButtonStyleClose}" >
+        <Button HorizontalAlignment="Right" VerticalAlignment="Top" Click="bt_colse_click" Style="{DynamicResource ButtonStyleClose}" >
             <Image Source="res/close.png"/>
         </Button>
         <Image Source="res/ic.png" HorizontalAlignment="Left" VerticalAlignment="Top" Width="22" Height="22" Margin="2,2,0,0"/>
-        <Button Content="选择文件" HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="bt_chouse" Style="{DynamicResource ButtonStyle}" Width="67" Margin="0,0,0,12" Background="{x:Null}" BorderBrush="{x:Null}" MinHeight="25" MinWidth="66" Foreground="#FF043648"/>
+        <Button x:Name="bt_choose" Content="选择文件" HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="bt_choose_click" Style="{DynamicResource ButtonStyle}" Width="67" Margin="0,0,0,12" Background="{x:Null}" BorderBrush="{x:Null}" MinHeight="25" MinWidth="66" Foreground="#FF043648" IsDefault="True"/>
     </Grid>
 </Window>
