--- a/stock_searcher/App.xaml
+++ b/stock_searcher/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:nnns"
-             StartupUri="StockSearcher.xaml">
+             StartupUri="StockSearcher.xaml"
+             Startup="Application_Startup" Exit="Application_Exit" ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#C6FFFFFF"/>
         <Style x:Key="ButtonStyleClose" TargetType="{x:Type Button}">
